--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "routerapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://dhruvparmar08.com/reactwebapp",
+  "homepage": "http://dhruvparmar08.io/reactwebapp",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
