--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "routerapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://dhruvparmar08.io/reactwebapp",
+  "homepage": "http://dhruvparmar08.io/reactwebapp/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
